--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -16,6 +16,9 @@
 
         <ui:define name="conteudo">
             <h:form id="login">
+            
+            	<h:messages globalOnly="true"/>
+            	
                 <fieldset>
                     <legend>Login</legend>
                     <h:panelGrid columns="3">
